--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <body>
 		
 		<div class = "schbanner">
-		<a href="index.html"> <img class ="banner" src="img/logobanner.png"></a>
+		<a href="index.html"> <img class ="banner" src="logobanner.png"></a>
 		</div> 
        
         <div class = "topNav">
@@ -49,15 +49,15 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active" align='center'>
-      <img src="img/kinder.jpg" alt="Kinder" style="width:53%;">
+      <img src="kinder.jpg" alt="Kinder" style="width:53%;">
     </div>
 
     <div class="item" align='center'>
-      <img src="img/seniorhighschool.jpg" alt="Senior High School" style="width:60%;">
+      <img src="seniorhighschool.jpg" alt="Senior High School" style="width:60%;">
     </div>
 
     <div class="item" align='center'>
-      <img src="img/basketballteam.jpg" alt="Basketball Team" style="width:53%;">
+      <img src="basketballteam.jpg" alt="Basketball Team" style="width:53%;">
     </div>
   </div>
 
