--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
 		<title> CKSM </title>
 		<link rel="icon" type="image/x-icon" href="img/cksmlogo.ico">
-		<link rel="stylesheet" href="css/navStyle.css">
+		<link rel="stylesheet" href="navStyle.css">
 		
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
