--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
 		<title> CKSM </title>
-		<link rel="icon" type="image/x-icon" href="img/cksmlogo.ico">
+		<link rel="icon" type="image/x-icon" href="cksmlogo.ico">
 		<link rel="stylesheet" href="navStyle.css">
 		
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
