--- a/About.html
+++ b/About.html
@@ -1,7 +1,7 @@
 <html>
     <head>
 		<title> About Us | CKSM </title>
-		<link rel="stylesheet" href="css/navStyle.css">
+		<link rel="stylesheet" href="navStyle.css">
 			
 			<style>
 				.topNav {
@@ -16,7 +16,7 @@
     <body>
 		
 		<div class = "schbanner">
-		<a href="index.html"> <img class ="banner" src="img/logobanner.png"></a>
+		<a href="index.html"> <img class ="banner" src="logobanner.png"></a>
 		</div> 
        
         <div class = "topNav">
