--- a/Admission.html
+++ b/Admission.html
@@ -1,7 +1,7 @@
 <html>
     <head>
 		<title> Admission | CKSM </title>
-		<link rel="stylesheet" href="css/navStyle.css">
+		<link rel="stylesheet" href="navStyle.css">
 		<style>
 			.topNav {
 				background-color: #800000;
@@ -15,7 +15,7 @@
     <body>
 		
 		<div class = "schbanner">
-		<a href="index.html"> <img class ="banner" src="img/logobanner.png"></a>
+		<a href="index.html"> <img class ="banner" src="logobanner.png"></a>
 		</div> 
        
         <div class = "topNav">
@@ -29,6 +29,6 @@
             
 			</ul>
         </div>
-<img src="C:\Users\PC\Documents\cksm\img\enrollment.jpg" alt="Italian Trulli">
+<img src="enrollment.jpg" alt="Italian Trulli">
     </body>
 </html>
