--- a/News.html
+++ b/News.html
@@ -1,7 +1,7 @@
 <html>
     <head>
 		<title> News | CKSM </title>
-		<link rel="stylesheet" href="css/navStyle.css">
+		<link rel="stylesheet" href="navStyle.css">
 		<style>
 			.topNav {
 				background-color: #800000;
@@ -15,7 +15,7 @@
     <body>
 		
 		<div class = "schbanner">
-		<a href="index.html"> <img class ="banner" src="img/logobanner.png"></a>
+		<a href="index.html"> <img class ="banner" src="logobanner.png"></a>
 		</div> 
        
         <div class = "topNav">
@@ -63,7 +63,7 @@ td, th {
   
   
   <tr>
-    <td><img src="img/enrollment.jpg" alt="Italian Trulli" style="width:50%;"> </td> 
+    <td><img src="enrollment.jpg" alt="Italian Trulli" style="width:50%;"> </td> 
     
   </tr>
   <tr>
