--- a/About.html
+++ b/About.html
@@ -1,17 +1,21 @@
 <html>
     <head>
-		<title> About Us | CKSM </title>
+		<title> CKSM </title>
+		<link rel="icon" type="image/x-icon" href="cksmlogo.ico">
 		<link rel="stylesheet" href="navStyle.css">
-			
-			<style>
-				.topNav {
-					background-color: #800000;
-					overflow: hidden;
-					text-align: center;
+		
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+		<style>
+			.topNav {
+				background-color: #800000;
+				overflow: hidden;
+				text-align: center;
 				}
-			</style>
-
-    </head>
+		</style>
+		
+	</head>
 
     <body>
 		
@@ -25,34 +29,62 @@
 				<a href="News.html">News</a>
 				<a href="Academics.html">Academics</a> 
 				<a href="Admission.html">Admission</a> 
-				<a class ="active" href="About.html">About</a>
+				<a href="About.html">About</a>
 				<a href="Contact.html">Contact</a>
-            
+				
 			</ul>
         </div>
-<p> Christ the King School of Muntinlupa (CKSM) was conceived during the last quarter of 1993.  Its founder, Dr. Jose V. Yason, Jr., a physician by profession but profoundly academic at heart, has always dreamed of putting up a school in Muntinlupa.  He finally decided to pursue his dreams.  Putting all his efforts, time, and resources together, the School was born.
+		
+		<! carousel image here > 
+		
+		<br>
+		<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
 
-	Dr. Yason sought the services of Mr. Simeon Bumanglag and Mrs. Mercedes V. Caceres to help him go through the different stages of putting up a school.  Mr. Bumanglag has been an outstanding educator who has served numerous academic institutions both in the public and private sectors.  The same can be said of Mrs. Caceres, having been in the profession for decades.
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active" align='center'>
+      <img src="Mssion.jpg" alt="Kinder" style="width:53%;">
+    </div>
 
-	While the documents required by the Department of Education were being processed, the groundwork for the school building was then laid. CKSM, situated on a 1.5-hectare lot in JAYSONSville II, Putatan, Muntinlupa City, is owned by Jaysons Realty and Development Corporation, a founding member of the Institution.
+    <div class="item" align='center'>
+      <img src="Vision.jpg" alt="Senior High School" style="width:60%;">
+    </div>
 
-	In June 1994, CKSM formally opened with only 20 students.  The following SY 1995-1996, CKSM’s population increased by 200% as its enrollment went up to 60.
- 
- </p>
- <h2> VISION </h2>
- <p> As a holistic center for education, Christ the King School of Muntinlupa Foundation, Inc. envisions itself to produce globally competitive individuals, through care and love, to serve his fellowmen.</p>
- <h2> MISSION </h2>
- <p> Christ the King School of Muntinlupa Foundation, Inc. aims to develop a holistic child that responds to the demands of a fast-changing society, by providing an affordable, quality, and relevant education towards local and global communities, through efficient and effective teaching, leading its students to be hardworking, cheerful, humble, and God-loving individuals.
-</p>
-<h2>GOALS </h2>
-<p> Aligned with its mission, CKSM strives to foster leadership qualities within its students. This is achieved by enhancing their higher-level thinking abilities and instilling values that promote a meaningful and purposeful life.
+    <div class="item" align='center'>
+      <img src="Goal.jpg" alt="Basketball Team" style="width:53%;">
+    </div>
+  </div>
 
-	Thereby, the students shall;
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
-Develop a strong foundation in various academic subjects, consistently strive for high levels of understanding and proficiency, and demonstrate the ability to apply theoretical knowledge to practical situations.
-Acquire practical skills that are aligned with the evolving needs of the community, demonstrating the ability to translate theoretical concepts into real-world applications and solutions.
-Cultivate a diverse skill set, including critical thinking, effective communication, cross-cultural awareness, and adaptability, to thrive in a globalized world and excel on both local and international stages.
-Strive for personal growth by developing character traits such as hard work, cheerfulness, humility, and responsibility, and engage in activities that foster emotional intelligence and interpersonal skills.
-</p>
-   </body>
+		
+		
+		
+
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+
+
+
+
+    </body>
+	
+
+
+
 </html>
