--- a/About.html
+++ b/About.html
@@ -1,7 +1,7 @@
 <html>
     <head>
 		<title> CKSM </title>
-		<link rel="icon" type="image/x-icon" href="cksmlogo.ico">
+		<link rel="icon" type="image/x-icon" href="img/cksmlogo.ico">
 		<link rel="stylesheet" href="navStyle.css">
 		
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -20,7 +20,7 @@
     <body>
 		
 		<div class = "schbanner">
-		<a href="index.html"> <img class ="banner" src="logobanner.png"></a>
+		<a href="index.html"> <img class ="banner" src="img/logobanner.png"></a>
 		</div> 
        
         <div class = "topNav">
@@ -49,15 +49,15 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active" align='center'>
-      <img src="Mssion.jpg" alt="Kinder" style="width:53%;">
+      <img src="img/Mission.jpg" alt="Kinder" style="width:53%;">
     </div>
 
     <div class="item" align='center'>
-      <img src="Vision.jpg" alt="Senior High School" style="width:60%;">
+      <img src="img/Vision.jpg" alt="Senior High School" style="width:60%;">
     </div>
 
     <div class="item" align='center'>
-      <img src="Goal.jpg" alt="Basketball Team" style="width:53%;">
+      <img src="img/Goal.jpg" alt="Basketball Team" style="width:53%;">
     </div>
   </div>
 
@@ -88,3 +88,4 @@
 
 
 </html>
+	
