--- a/Academics.html
+++ b/Academics.html
@@ -60,7 +60,7 @@
     </div>
 
     <div class="item" align='center'>
-      <img src="asketballteam.jpg" alt="Basketball Team" style="width:53%;">
+      <img src="basketballteam.jpg" alt="Basketball Team" style="width:53%;">
     </div>
 
    <div class="item" align='center'>
