--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active" align='center'>
-      <img src="kinder.jpg" alt="Kinder" style="width:53%;">
+      <img src="kinderr.jpg" alt="Kinder" style="width:53%;">
     </div>
 
     <div class="item" align='center'>
-      <img src="seniorhighschool.jpg" alt="Senior High School" style="width:60%;">
+      <img src="seniorhighschooll.jpg" alt="Senior High School" style="width:60%;">
     </div>
 
     <div class="item" align='center'>
-      <img src="basketballteam.jpg" alt="Basketball Team" style="width:53%;">
+      <img src="basketballteamm.jpg" alt="Basketball Team" style="width:53%;">
     </div>
   </div>
 
