--- a/Academics.html
+++ b/Academics.html
@@ -56,7 +56,7 @@
     </div>
 
     <div class="item" align='center'>
-      <img src="seniorhighschooll.jpg" alt="Senior High School" style="width:60%;">
+      <img src="seniorhighps.jpg" alt="Senior High School" style="width:60%;">
     </div>
 
     <div class="item" align='center'>
