--- a/Admission.html
+++ b/Admission.html
@@ -1,7 +1,7 @@
 <html>
     <head>
 		<title> CKSM </title>
-		<link rel="icon" type="image/x-icon" href="img/cksmlogo.ico">
+		<link rel="icon" type="image/x-icon" href="cksmlogo.ico">
 		<link rel="stylesheet" href="css/navStyle.css">
 		
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -20,7 +20,7 @@
     <body>
 		
 		<div class = "schbanner">
-		<a href="index.html"> <img class ="banner" src="img/logobanner.png"></a>
+		<a href="index.html"> <img class ="banner" src="logobanner.png"></a>
 		</div> 
        
         <div class = "topNav">
@@ -54,26 +54,26 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active" align='center'>
-      <img src="img/1.jpg" alt="Kinder" style="width:53%;">
+      <img src="1.jpg" alt="Kinder" style="width:53%;">
     </div>
 
     <div class="item" align='center'>
-      <img src="img/2.jpg" alt="Senior High School" style="width:60%;">
+      <img src="2.jpg" alt="Senior High School" style="width:60%;">
     </div>
 
     <div class="item" align='center'>
-      <img src="img/3.jpg" alt="Basketball Team" style="width:53%;">
-    </div>
+      <img src="3.jpg" alt="Basketball Team" style="width:53%;">
+    </div
 
    <div class="item" align='center'>
-      <img src="img/4.jpg" alt="Senior High School" style="width:60%;">
+      <img src="4.jpg" alt="Senior High School" style="width:60%;">
     </div>
 	  
   <div class="item" align='center'>
-      <img src="img/5.jpg" alt="Senior High School" style="width:60%;">
+      <img src="5.jpg" alt="Senior High School" style="width:60%;">
     </div>
   <div class="item" align='center'>
-      <img src="img/6.jpg" alt="Senior High School" style="width:60%;">
+      <img src="6.jpg" alt="Senior High School" style="width:60%;">
     </div>
 	
 
