--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
        
         <div class = "topNav">
 			<ul class = "navAnchor">
-				
+				<a href="Home.html">Home</a>
 				<a href="News.html">News</a>
 				<a href="Academics.html">Academics</a> 
 				<a href="Admission.html">Admission</a> 
