--- a/News.html
+++ b/News.html
@@ -20,7 +20,7 @@
        
         <div class = "topNav">
 			<ul class = "navAnchor">
-				
+				<a href="Home.html">Home</a>
 				<a class ="active" href="News.html">News</a>
 				<a href="Academics.html">Academics</a> 
 				<a href="Admission.html">Admission</a> 
