--- a/Academics.html
+++ b/Academics.html
@@ -25,9 +25,9 @@
        
         <div class = "topNav">
 			<ul class = "navAnchor">
-				
+				<a href="Home.html">Home</a>
 				<a href="News.html">News</a>
-				<a href="Academics.html">Academics</a> 
+				<a class ="active" href="Academics.html">Academics</a> 
 				<a href="Admission.html">Admission</a> 
 				<a href="About.html">About</a>
 				<a href="Contact.html">Contact</a>
