--- a/Admission.html
+++ b/Admission.html
@@ -29,7 +29,7 @@
 				<a href="Home.html">Home</a>
 				<a href="News.html">News</a>
 				<a href="Academics.html">Academics</a> 
-				<a href="Admission.html">Admission</a> 
+				<a class="active" href="Admission.html">Admission</a> 
 				<a href="About.html">About</a>
 				<a href="Contact.html">Contact</a>
 				
